Kubernetes/Excalidraw/yamls/excalidraw.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: excalidraw
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app: excalidraw
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 5000
  selector:
    app: excalidraw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app: excalidraw        
    app.kubernetes.io/name: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
  template:
    metadata:
      labels:
        app: excalidraw        
        app.kubernetes.io/name: excalidraw
    spec:
      containers:
      - image: excalidraw/excalidraw:latest
        imagePullPolicy: IfNotPresent
        name: excalidraw
        ports:
        - containerPort: 5000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-excalidraw-security
  namespace: excalidraw
spec:
  headers:
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-excalidraw-websecure
  namespace: excalidraw
  annotations:
    # For Homepage service discovery
    gethomepage.dev/href: "https://excalidraw.domain.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Excalidraw"
    gethomepage.dev/group: Graphics
    gethomepage.dev/icon: excalidraw.svg
    gethomepage.dev/app: excalidraw # optional, may be needed if app.kubernetes.io/name != ingressRoute metadata.name
    gethomepage.dev/name: "Excalidraw"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`excalidraw.domain.com`)
      services:
        - name: excalidraw
          port: 5000
          serversTransport: traefik-excalidraw-transport
      middlewares:
        - name: traefik-excalidraw-security
  tls:
    secretName: excalidraw-domain-com
    options:
      name: traefik-excalidraw-tlsoptions
